# tap-scrollinglistwebscrapper

./: .cookiecutterrc  LICENSE  README.md  launch.json  meltano.yml  pyproject.toml  tap_scrollinglistwebscrapper.ipynb
.github/workflows/: test.yml
tap_scrollinglistwebscrapper/: __init__.py  client.py  streams.py  tap.py
tests/: __init__.py  test_core.py
